[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar_harvest_ie_ui"
version = "0.1.0"
description = "FastAPI-based UI/dashboard service for StellarHarvest Insight Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Machine Learning Maverick", email = "github@machinelearningmaverick.com" },
]
keywords = ["fastapi", "ui", "dashboard", "swpc", "space-weather"]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "aiokafka",
    "python-multipart",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellar_harvest_ie_ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -q --disable-warnings --strict-markers"
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-mock>=3.10.0"
]